<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SeerVariableTrackerBrowserWidgetForm</class>
 <widget class="QWidget" name="SeerVariableTrackerBrowserWidgetForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>794</width>
    <height>528</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLineEdit" name="variableAddLineEdit">
       <property name="toolTip">
        <string>Add a variable to track.</string>
       </property>
       <property name="placeholderText">
        <string>Enter a variable name to track</string>
       </property>
       <property name="clearButtonEnabled">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QToolButton" name="variableDeleteToolButton">
       <property name="toolTip">
        <string>Delete selected variables.</string>
       </property>
       <property name="text">
        <string>...</string>
       </property>
       <property name="icon">
        <iconset resource="../SeeDataStructureRc.qrc">
         <normaloff>:/resources/RelaxLightIcons/list-remove.svg</normaloff>:/resources/RelaxLightIcons/list-remove.svg</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QToolButton" name="variableDeleteAllToolButton">
       <property name="toolTip">
        <string>Delete all variables.</string>
       </property>
       <property name="text">
        <string>...</string>
       </property>
       <property name="icon">
        <iconset resource="../SeeDataStructureRc.qrc">
         <normaloff>:/resources/RelaxLightIcons/edit-delete.svg</normaloff>:/resources/RelaxLightIcons/edit-delete.svg</iconset>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item row="1" column="0">
    <widget class="QTreeWidget" name="variablesTreeWidget">
     <property name="columnCount">
      <number>3</number>
     </property>
     <column>
      <property name="text">
       <string>ID</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Name</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Value</string>
      </property>
     </column>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../SeeDataStructureRc.qrc"/>
 </resources>
 <connections/>
</ui>
